add gui for all instances, but needed to be fixed